fix, refactor: 순환 의존성 문제 해결, stream 형식 수정